--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=">
-  <title></title>
-</head>
-<body>
-  <h1> Ms. Neumann's Website </h1>
+<html>
   
-  
-</body>
-  
+    <body>
+      
+      <h1> Reid N's Website </h1>
+     
+  </body>
   
 <style>
- h1 {
-  color: gold;
-  text-align: center;
+  
+  
+  body {
+  background-color: dodgerblue;
 }
 
-body {
-  background-color: salmon;
-} 
+h1 {
+  color: white;
+  text-align: center;
+  font-size: 75px;
+}
   
-  </style>
+  
+  
+</style>
+  
+
+
+
+
+
 </html>
