--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <ul>
   <li><a class="index.html" href="#home">Home</a></li>
-  <li><a href="espn.com">News</a></li>
+  <li><a href="myapps.html">Projects</a></li>
   <li><a href="gmail.com">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
